services/order-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: cos-order-service-test
          image: cos-order-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3002
