services/order-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service-service
spec:
  ports:
    - port: 3002
      targetPort: 3002
  selector:
    app: order-service
