services/order-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/order-service
            pathType: "Prefix"
            backend:
              service:
                name: order-service-service
                port:
                  number: 3002
